<resources>

    <string name="app_name">CinemaApp</string>

    <!-- Movies list screen -->
    <string name="movies_list_name">Avengers: End Game</string>
    <string name="movies_list_age_template">%d+</string>
    <string name="movies_list_reviews_template">%d REVIEWS</string>
    <string name="movies_list_duration_template">%d MIN</string>
    
    <string name="_13">13+</string>
    <string name="back">Back</string>
    <string name="_tag">Action, Adventure, Fantasy</string>
    <string name="_reviews">125 REVIEWS</string>
    <string name="_storyline">Storyline</string>
    <string name="_content_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="_cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="_137_min">137 MIN</string>
</resources>