<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_black">

        <ImageView
            android:id="@+id/image_avengers"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers_details_xxxhdpi"
            app:layout_constraintBottom_toTopOf="@+id/film_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mask_movie_image_mdpi"
            app:layout_constraintBottom_toBottomOf="@+id/image_avengers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left_mdpi"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/tv_back"
            app:layout_constraintStart_toStartOf="@id/age" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:textColor="@color/gray_back"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBottomOf="@id/guideline3"
            app:layout_constraintStart_toEndOf="@id/arrow_back" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/barrier_image"
            app:layout_constraintStart_toStartOf="@+id/film_name" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="image_avengers" />

        <TextView
            android:id="@+id/film_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="59dp" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_tag"
            android:textColor="@color/red_tag"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/film_name" />

        <ImageView
            android:id="@+id/iv_first_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_redstar_mdpi"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
            app:layout_constraintEnd_toStartOf="@+id/iv_second_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag" />

        <ImageView
            android:id="@+id/iv_second_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_redstar_mdpi"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
            app:layout_constraintEnd_toStartOf="@+id/iv_third_star"
            app:layout_constraintStart_toEndOf="@+id/iv_first_star"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag" />

        <ImageView
            android:id="@+id/iv_third_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/ic_redstar_mdpi"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
            app:layout_constraintEnd_toStartOf="@id/iv_forth_star"
            app:layout_constraintStart_toEndOf="@+id/iv_second_star"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag" />

        <ImageView
            android:id="@+id/iv_forth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_redstar_mdpi"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
            app:layout_constraintEnd_toStartOf="@id/iv_fifth_star"
            app:layout_constraintStart_toEndOf="@id/iv_third_star"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag" />

        <ImageView
            android:id="@+id/iv_fifth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_star_mdpi"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reviews"
            app:layout_constraintStart_toEndOf="@id/iv_forth_star"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag" />

        <TextView
            android:id="@+id/tv_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/_reviews"
            android:textColor="@color/gray_back"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_fifth_star"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews" />

        <TextView
            android:id="@+id/content_storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:lineSpacingExtra="4dp"
            android:paddingTop="5dp"
            android:text="@string/_content_storyline"
            android:textColor="@color/while_opacity_75"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_cast"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>